--- a/WMS/Views/Theme/Default/Pallets/_PalletDisptachDetail.cshtml
+++ b/WMS/Views/Theme/Default/Pallets/_PalletDisptachDetail.cshtml
@@ -3,10 +3,10 @@
 @using Ganedata.Core.Entities.Enums
 @using Ganedata.Core.Models;
 
-@using (Html.BeginForm("SavePalletsDispatch", "Pallets", FormMethod.Post, new {id="frmDispatchPallets", @class = "form-horizontal", @enctype = "multipart/form-data", onsubmit="return OnSubmitFormvalidate()"}))
+@using (Html.BeginForm("SavePalletsDispatch", "Pallets", FormMethod.Post, new { id = "frmDispatchPallets", @class = "form-horizontal", @enctype = "multipart/form-data", onsubmit = "return OnSubmitFormvalidate()" }))
 {
     @Html.HiddenFor(model => model.PalletDispatchId)
-    @Html.Hidden("DispatchSelectedPalletIds")
+    @Html.HiddenFor(model => model.OrderProcessId)
     @Html.Hidden("ProofOfDeliveryImageFilenames")
     <div class="col-md-12 p-0 order-forms">
         <div class="input-group text-center h-100 justify-content-center align-items-center">
@@ -48,7 +48,6 @@
                         <div class="col-md-12 p-0 pull-left">
                             <div class="col-md-4 pull-left pallet-quantity-hlabel">Select Service</div>
                             <div class="col-md-8 pull-left" id="divserviceDriver">@Html.DropDownListFor(m => m.NetworkCode, Model.AllDpdServices, "Select Service", new { @class = "chosen-select" })</div>
-
                         </div>
                     </div>
                     <div class="col-md-12 p-0 pull-left">
@@ -129,7 +128,7 @@
 
 </script>
 <script type="text/javascript">
-     $("#frmDispatchPallets").on("submit", function () {
+    $("#frmDispatchPallets").on("submit", function () {
         var deliveryMethod = $("#DeliveryMethod").val();
         if (deliveryMethod === "3") {
             var serviceId = $("#NetworkCode").val();
