--- a/WMS/Views/Theme/Default/SalesOrders/_SOShippingDetails.cshtml
+++ b/WMS/Views/Theme/Default/SalesOrders/_SOShippingDetails.cshtml
@@ -26,6 +26,7 @@
                 @Html.TextBoxFor(m => m.ShipmentAddressLine3, new { placeholder = "Address Line3", @class = "form-control" })
                 @Html.TextBoxFor(m => m.ShipmentAddressLine4, new { placeholder = "Address Line4", @class = "form-control" })
                 @Html.TextBoxFor(m => m.ShipmentAddressPostcode, new { placeholder = "Postcode", @class = "form-control" })
+                @Html.DropDownList("ShipmentCountryId", ViewBag.Countries as SelectList, new { @class = "chosen-select form-control" })
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
                 <div class="mt-1">
