--- a/WarehouseEcommerce/Views/Theme/University/Products/AddToCart.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/AddToCart.cshtml
@@ -1,10 +1,4 @@
-﻿
-@{
-    ViewBag.Title = "AddToCart";
-}
-
-
-<section class="nb_sec nb_prdlisting_pgsec">
+﻿<section class="nb_sec nb_prdlisting_pgsec">
     <div class="container">
         <div class="breadCrumbtopsec basket-page-breadcrum">
             <div class="nb_bread_crumbwrap">
