--- a/WarehouseEcommerce/Views/Theme/University/Products/WishList.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/WishList.cshtml
@@ -1,10 +1,4 @@
-﻿
-@{
-    ViewBag.Title = "WishList";
-}
-
-
-<section class="nb_sec nb_prdlisting_pgsec">
+﻿<section class="nb_sec nb_prdlisting_pgsec">
     <div class="container">
         <div class="breadCrumbtopsec">
             <div class="nb_bread_crumbwrap">
@@ -24,7 +18,7 @@
             <div id="UpdateWishList">
                 @Html.Action("_wishlistItems")
             </div>
-        
+
         </div>
     </div>
 </section>
