--- a/WarehouseEcommerce/Views/Theme/University/User/Account.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/User/Account.cshtml
@@ -1,6 +1,6 @@
 ﻿@model WarehouseEcommerce.ViewModels.AccountDetailViewModel
 @{
-    ViewBag.Title = "OrderHistory";
+    ViewBag.Title = "Your Account";
 }
 <section class="nb_sec nb_prdlisting_pgsec">
     <div class="container">
