--- a/WarehouseEcommerce/Views/Theme/University/Home/Index.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Home/Index.cshtml
@@ -1,7 +1,4 @@
-﻿@{
-    ViewBag.Title = "Index";
-}
-@Html.Action("_SliderPartial")
+﻿@Html.Action("_SliderPartial")
 @Html.Action("_TopCategoryPartial")
 @Html.Action("_SpecialProductPartial")
 @Html.Action("_OurBrands")
