--- a/WarehouseEcommerce/Views/Theme/University/Products/_ProductByAttributeSelector.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/_ProductByAttributeSelector.cshtml
@@ -11,7 +11,15 @@
             <div class="col-md-12 col-lg-12">
                 <div class="nb_prd_det_rightsec">
                     @Html.HiddenFor(model => Model.Product.ProductId)
-                    <span class="prd_amnt">@ViewBag.CurrencySymbol@Model.Product.SellPrice</span>
+                    @if (Model.Product.SellPrice != null && Model.Product.SellPrice > 0)
+                    {
+                        <div class="prd_amnt">@ViewBag.CurrencySymbol@(Model.Prices.FinalSellPrice + Model.Prices.TaxAmount)<span> inc VAT</span></div>
+                        <div class="prd_amnt_excl_VAT">(@ViewBag.CurrencySymbol@Model.Prices.FinalSellPrice<span> excl VAT</span>)</div>
+                        if (Model.Product.SellPrice != Model.Prices.FinalSellPrice)
+                        {
+                            <div class="prd_amnt_RRP">RRP @ViewBag.CurrencySymbol@Model.Product.SellPrice<span> excl VAT</span></div>
+                        }
+                    }
                     <div class="availibility">
                         @{ var availableProductCount = Ganedata.Core.Services.Inventory.GetAvailableProductCount(Model.Product, ViewBag.SiteId); }
                         @if (availableProductCount > 0)
