--- a/WMS/Views/Theme/Default/PurchaseOrders/_POShippingDetails.cshtml
+++ b/WMS/Views/Theme/Default/PurchaseOrders/_POShippingDetails.cshtml
@@ -61,7 +61,7 @@
         @Html.TextBoxFor(m => m.ShipmentAddressLine1, new { placeholder = "Address Line1", @class = "form-control" })
         @Html.TextBoxFor(m => m.ShipmentAddressLine2, new { placeholder = "Address Line2", @class = "form-control" })
         @Html.TextBoxFor(m => m.ShipmentAddressLine3, new { placeholder = "Address Line3", @class = "form-control" })
-        @Html.TextBoxFor(m => m.ShipmentAddressLine4, new { placeholder = "Address Line4", @class = "form-control" })
+        @Html.TextBoxFor(m => m.ShipmentAddressTown, new { placeholder = "Address Town", @class = "form-control" })
         @Html.TextBoxFor(m => m.ShipmentAddressPostcode, new { placeholder = "Postcode", @class = "form-control" })
         @Html.HiddenFor(model=>model.IsCollectionFromCustomerSide)
     </div>
