--- a/WMS/Views/Theme/Default/SalesOrders/_ConsignmentAddressDetails.cshtml
+++ b/WMS/Views/Theme/Default/SalesOrders/_ConsignmentAddressDetails.cshtml
@@ -33,7 +33,7 @@
         settings.Columns.Add("ShipmentAddressLine1");
         settings.Columns.Add("ShipmentAddressLine2");
         settings.Columns.Add("ShipmentAddressLine3");
-        settings.Columns.Add("ShipmentAddressLine4");
+        settings.Columns.Add("ShipmentAddressTown");
         settings.Columns.Add("ShipmentAddressPostcode");
         settings.Columns.Add(column =>
         {
