--- a/WMS/Views/Theme/Default/PurchaseOrders/BlindShipment.cshtml
+++ b/WMS/Views/Theme/Default/PurchaseOrders/BlindShipment.cshtml
@@ -247,7 +247,7 @@
     <div class="input-group h-100 justify-content-center align-items-center">
         @Html.Label("Shipment Address Line 4", htmlAttributes: new { @class = "col-md-4" })
         <div class="col-md-8">
-            @Html.TextBox("ShipmentAddressLine4", "", new { placeholder = "Address Line4", @class = "form-control" })
+            @Html.TextBox("ShipmentAddressTown", "", new { placeholder = "Address Town", @class = "form-control" })
 
         </div>
     </div>
