--- a/WMS/Views/Theme/Default/SalesOrders/ProcessOrder.cshtml
+++ b/WMS/Views/Theme/Default/SalesOrders/ProcessOrder.cshtml
@@ -119,10 +119,10 @@
             </div>
         </div>
         <div class="input-group h-100 justify-content-center align-items-center">
-            @Html.LabelFor(m => m.ShipmentAddressLine4, htmlAttributes: new { @class = "col-md-4" })
+            @Html.LabelFor(m => m.ShipmentAddressTown, htmlAttributes: new { @class = "col-md-4" })
             <div class="col-md-8">
-                @Html.TextBoxFor(m => m.ShipmentAddressLine4, new { placeholder = "Address Line4", @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ShipmentAddressLine4)
+                @Html.TextBoxFor(m => m.ShipmentAddressTown, new { placeholder = "Address Town", @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ShipmentAddressTown)
             </div>
         </div>
         <div class="input-group h-100 justify-content-center align-items-center">
