--- a/WMS/Views/Theme/Modern/PurchaseOrders/BlindShipment.cshtml
+++ b/WMS/Views/Theme/Modern/PurchaseOrders/BlindShipment.cshtml
@@ -245,9 +245,9 @@
         </div>
     </div>
     <div class="input-group h-100 justify-content-center align-items-center">
-        @Html.Label("Shipment Address Line 4", htmlAttributes: new { @class = "col-md-4" })
+        @Html.Label("Shipment Address Town", htmlAttributes: new { @class = "col-md-4" })
         <div class="col-md-8">
-            @Html.TextBox("ShipmentAddressLine4", "", new { placeholder = "Address Line4", @class = "form-control" })
+            @Html.TextBox("ShipmentAddressTown", "", new { placeholder = "Address Town", @class = "form-control" })
 
         </div>
     </div>
