--- a/WMS/Views/Theme/Modern/SalesOrders/EditDeliveryAddress.cshtml
+++ b/WMS/Views/Theme/Modern/SalesOrders/EditDeliveryAddress.cshtml
@@ -53,8 +53,8 @@
                     @Html.EditorFor(model => model.ShipmentAddressLine3, new { htmlattributes = new { @class = " form-control col-md-8" } })
                 </div>
                 <div class="input-group h-100 justify-content-center align-items-center">
-                    @Html.LabelFor(model => model.ShipmentAddressLine4, htmlAttributes: new { @class = "col-md-4" })
-                    @Html.EditorFor(model => model.ShipmentAddressLine4, new { htmlattributes = new { @class = " form-control col-md-8" } })
+                    @Html.LabelFor(model => model.ShipmentAddressTown, htmlAttributes: new { @class = "col-md-4" })
+                    @Html.EditorFor(model => model.ShipmentAddressTown, new { htmlattributes = new { @class = " form-control col-md-8" } })
                 </div>
                 <div class="input-group h-100 justify-content-center align-items-center">
                     @Html.LabelFor(model => model.ShipmentAddressPostcode, htmlAttributes: new { @class = "col-md-4" })
