--- a/WMS/Views/Theme/Modern/SalesOrders/_SOShippingDetails.cshtml
+++ b/WMS/Views/Theme/Modern/SalesOrders/_SOShippingDetails.cshtml
@@ -24,7 +24,7 @@
                 @Html.TextBoxFor(m => m.ShipmentAddressLine1, new { placeholder = "Address Line1", @class = "form-control" })
                 @Html.TextBoxFor(m => m.ShipmentAddressLine2, new { placeholder = "Address Line2", @class = "form-control" })
                 @Html.TextBoxFor(m => m.ShipmentAddressLine3, new { placeholder = "Address Line3", @class = "form-control" })
-                @Html.TextBoxFor(m => m.ShipmentAddressLine4, new { placeholder = "Address Line4", @class = "form-control" })
+                @Html.TextBoxFor(m => m.ShipmentAddressTown, new { placeholder = "Address Town", @class = "form-control" })
                 @Html.TextBoxFor(m => m.ShipmentAddressPostcode, new { placeholder = "Postcode", @class = "form-control" })
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
