--- a/WMS/Views/Theme/Default/PurchaseOrders/Edit.cshtml
+++ b/WMS/Views/Theme/Default/PurchaseOrders/Edit.cshtml
@@ -172,7 +172,21 @@
                 @Html.LabelFor(model => model.DirectShip, htmlAttributes: new { @class = "col-md-4" })
                 <div class="col-md-8">
                     @Html.EditorFor(model => model.DirectShip)
+                </div>
+            </div>
+            <div class="input-group h-100 justify-content-center align-items-center" style="@(Model.DirectShip == true ? "" : "display:none")" id="directShipdd">
+                @Html.Label("DirectShip Orders", htmlAttributes: new { @class = "col-md-4" })
+                <div class="col-md-8">
+                    <div>
+                        <div class="col-11 p-0 mt-1 pull-left">
 
+                            @Html.DropDownListFor(model => model.BaseOrderID, ViewBag.DirectOrderList as SelectList, "Select Orders", new { @class = "chosen-select" })
+
+                        </div>
+                        <div class="col-1 p-0 pull-left">
+                            <a href="javascript:;" onclick="GetOrderDetail();" id="AccountAddress" class="btn btn-primary"><i class="fa fa-circle-o-notch" style="font-size:24px"></i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-md-offset-2 col-md-10 bottom-right">
@@ -180,7 +194,6 @@
                 <input name="commit" type="submit" value="Save and Process" id="CommandSaveAndProcess" class="btn btn-primary orderSaveAndProcess" />
                 <div class="btn btn-default">
                     @Html.ActionLink("Back to List", "Index", "PurchaseOrders", null, null, ViewBag.Fragment as string, null, null)
-
                 </div>
             </div>
         </div>
