--- a/WMS/Views/Theme/Default/Pallets/_PalletDisptachDetail.cshtml
+++ b/WMS/Views/Theme/Default/Pallets/_PalletDisptachDetail.cshtml
@@ -1,7 +1,5 @@
 ﻿@model Ganedata.Core.Entities.Domain.PalletDispatchViewModel
-@using Ganedata.Core.Entities.Helpers
 @using Ganedata.Core.Entities.Enums
-@using Ganedata.Core.Models;
 
 @using (Html.BeginForm("SavePalletsDispatch", "Pallets", FormMethod.Post, new { id = "frmDispatchPallets", @class = "form-horizontal", @enctype = "multipart/form-data", onsubmit = "return OnSubmitFormvalidate()" }))
 {
@@ -15,10 +13,13 @@
                     <div class="col-md-12 p-0">
                         <div class="col-md-4 pull-left pallet-quantity-hlabel">Delivery Method</div>
                         <div class="input-group col-md-8 pull-left">
-
                             @Html.DropDownListFor(m => m.DeliveryMethod, EnumHelper.GetSelectList(typeof(DeliveryMethods)), new { @class = "chosen-select", @onchange = "DeliveryMethodChange(event)" })
-
-                            @*   @Html.DropDownListFor(m => m.SentMethodID, Model.AllSentMethods, new { @class = "chosen-select" })*@
+                        </div>
+                    </div>
+                    <div id="delivery-service__selector" style="@(string.IsNullOrEmpty(Model.NetworkCode)?"display:none":"")">
+                        <div class="col-md-12 p-0 pull-left">
+                            <div class="col-md-4 pull-left pallet-quantity-hlabel">Select Service</div>
+                            <div class="col-md-8 pull-left">@Html.DropDownListFor(m => m.NetworkCode, Model.AllDpdServices, "Select Service", new { @class = "chosen-select" })</div>
                         </div>
                     </div>
                     <div class="data-detail" style="@(string.IsNullOrEmpty(Model.NetworkCode)?"":"display:none")">
@@ -42,12 +43,6 @@
                             <div class="col-md-12" id="divCustomDriver" style="display: none">
                                 <div class="col-md-10"> @Html.TextBoxFor(m => m.CustomDriverDetails)</div><a class="fa fa-times col-md-1" onclick="$('#divCustomDriver').hide(); $('#divChooseDriver').fadeIn(); $('#lnkDriverManuallyEnter').fadeIn();"></a>
                             </div>
-                        </div>
-                    </div>
-                    <div class="data-ddp" style="@(string.IsNullOrEmpty(Model.NetworkCode)?"display:none":"")">
-                        <div class="col-md-12 p-0 pull-left">
-                            <div class="col-md-4 pull-left pallet-quantity-hlabel">Select Service</div>
-                            <div class="col-md-8 pull-left" id="divserviceDriver">@Html.DropDownListFor(m => m.NetworkCode, Model.AllDpdServices, "Select Service", new { @class = "chosen-select" })</div>
                         </div>
                     </div>
                     <div class="col-md-12 p-0 pull-left">
