--- a/WMS/Views/Theme/Default/SalesOrders/Create.cshtml
+++ b/WMS/Views/Theme/Default/SalesOrders/Create.cshtml
@@ -66,7 +66,6 @@
                    }
                    ).Bind(DateTime.UtcNow).GetHtml()
                     @Html.ValidationMessageFor(model => model.IssueDate)
-
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
@@ -86,7 +85,6 @@
                    }
                    ).Bind(DateTime.UtcNow).GetHtml()
                     @Html.ValidationMessageFor(model => model.ExpectedDate)
-
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
@@ -106,7 +104,6 @@
                    }
                    ).GetHtml()
                     @Html.ValidationMessageFor(model => model.ConfirmDate)
-
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
@@ -171,14 +168,12 @@
                 @Html.LabelFor(model => model.InvoiceNo, htmlAttributes: new { @class = "col-md-4" })
                 <div class="col-md-8">
                     @Html.EditorFor(model => model.InvoiceNo)
-
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.LabelFor(model => model.InvoiceDetails, htmlAttributes: new { @class = "col-md-4" })
                 <div class="col-md-8">
                     @Html.EditorFor(model => model.InvoiceDetails)
-
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
@@ -198,12 +193,12 @@
             <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.Label("Delivery Method", htmlAttributes: new { @class = "col-md-4" })
                 <div class="col-md-8">
-                    @Html.DropDownList("DeliveryMethod", EnumHelper.GetSelectList(typeof(DeliveryMethods)), "Select", new { @class = "chosen-select" })
+                    @Html.DropDownList("DeliveryMethod", EnumHelper.GetSelectList(typeof(DeliveryMethods)), "Select", new { @class = "chosen-select order-delivery-method" })
                 </div>
             </div>
-            <div class="input-group h-100 justify-content-center align-items-center" style="@(Model.DeliveryMethod != DeliveryMethods.DPD ?"display:none":"")">
+            <div class="input-group h-100 justify-content-center align-items-center" id="delivery-service__selector" style="@(Model.DeliveryMethod != DeliveryMethods.DPD ?"display:none":"")">
                 @Html.LabelFor(model => model.TenantDeliveryServiceId, htmlAttributes: new { @class = "col-md-4" })
-                <div class="col-md-8 pull-left" id="divserviceDriver">@Html.DropDownListFor(m => m.TenantDeliveryServiceId, ViewBag.TenantsDeliveryServices as SelectList, "Select Service", new { @class = "chosen-select" })</div>
+                <div class="col-md-8 pull-left">@Html.DropDownListFor(m => m.TenantDeliveryServiceId, ViewBag.TenantsDeliveryServices as SelectList, "Select Service", new { @class = "chosen-select" })</div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.LabelFor(model => model.DirectShip, htmlAttributes: new { @class = "col-md-4" })
@@ -219,16 +214,13 @@
                     <input type="button" id="OrderDetailUpdate" class="btn btn-primary orddet" value="Update">
                     <input type="button" id="OrderDetailDelete" class="btn btn-primary orddet" value="Delete">
                 </div>
-
             </div>
 
             <div class="col-md-12 p-0">
                 @Html.Action("_OrderDetails", "OrderDetail")
             </div>
-
         </div>
     </div>
-
 
     <div class="col-md-12 p-0 pull-left">
         <div class="card">
@@ -286,6 +278,3 @@
         updateSOShipmentInfo();
     });
 </script>
-
-
-
