--- a/WMS/Views/Theme/Default/SalesOrders/ProcessOrder.cshtml
+++ b/WMS/Views/Theme/Default/SalesOrders/ProcessOrder.cshtml
@@ -2,7 +2,6 @@
 @using Ganedata.Core.Entities.Helpers
 @using Ganedata.Core.Entities.Enums
 
-
 @section scripts {
 
     @Html.DevExpress().GetStyleSheets(
@@ -36,7 +35,6 @@
     function OnProcessedDetailsCallback() {
 
     }
-
 </script>
 
 <h2><span>Process Order</span></h2>
@@ -57,45 +55,45 @@
 
 @using (Html.BeginForm("Edit", "Locations", FormMethod.Post, new { @id = "frmProcessOrder" }))
 {
-<div class="col-md-6 pull-left">
+    <div class="col-md-6 pull-left">
 
-    <div class="input-group h-100 justify-content-center align-items-center">
-        @Html.LabelFor(model => model.OrderNumber, htmlAttributes: new { @class = "col-md-4" })
-        <div class="col-md-8">
-            @Html.DisplayFor(m => m.OrderNumber)
-            @Html.ValidationMessageFor(model => model.OrderNumber)
+        <div class="input-group h-100 justify-content-center align-items-center">
+            @Html.LabelFor(model => model.OrderNumber, htmlAttributes: new { @class = "col-md-4" })
+            <div class="col-md-8">
+                @Html.DisplayFor(m => m.OrderNumber)
+                @Html.ValidationMessageFor(model => model.OrderNumber)
+            </div>
+        </div>
+        <div class="input-group h-100 justify-content-center align-items-center">
+            @Html.LabelFor(model => model.Account.AccountCode, htmlAttributes: new { @class = "col-md-4" })
+            <div class="col-md-8">
+                @Html.DisplayFor(m => m.Account.AccountCode)
+            </div>
+        </div>
+        <div class="input-group h-100 justify-content-center align-items-center">
+            @Html.LabelFor(model => model.Account.AccountNameCode, htmlAttributes: new { @class = "col-md-4" })
+            <div class="col-md-8">
+                @Html.DisplayFor(m => m.Account.AccountNameCode)
+            </div>
+        </div>
+        <div class="input-group h-100 justify-content-center align-items-center">
+            @Html.LabelFor(m => m.DeliveryMethod, htmlAttributes: new { @class = "col-md-4" })
+            <div class="col-md-8">
+                @Html.DropDownListFor(m => m.DeliveryMethod, EnumHelper.GetSelectList(typeof(DeliveryMethods)), "Select Delivery Method", new { @class = "chosen-select form-control order-delivery-method" })
+            </div>
+        </div>
+        <div class="input-group h-100 justify-content-center align-items-center" id="delivery-service__selector" style="@(Model.DeliveryMethod != DeliveryMethods.DPD ?"display:none":"")">
+            @Html.LabelFor(model => model.TenantDeliveryServiceId, htmlAttributes: new { @class = "col-md-4" })
+            <div class="col-md-8 pull-left">@Html.DropDownListFor(m => m.TenantDeliveryServiceId, ViewBag.TenantsDeliveryServices as SelectList, "Select Service", new { @class = "chosen-select" })</div>
+        </div>
+        <div class="input-group h-100 justify-content-center align-items-center">
+            @Html.LabelFor(m => m.DeliveryNumber, htmlAttributes: new { @class = "col-md-4" })
+            <div class="col-md-8">
+                @Html.TextBoxFor(m => m.DeliveryNumber, new { placeholder = "Delivery Number", @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.DeliveryNumber)
+            </div>
         </div>
     </div>
-    <div class="input-group h-100 justify-content-center align-items-center">
-        @Html.LabelFor(model => model.Account.AccountCode, htmlAttributes: new { @class = "col-md-4" })
-        <div class="col-md-8">
-            @Html.DisplayFor(m => m.Account.AccountCode)
-        </div>
-    </div>
-    <div class="input-group h-100 justify-content-center align-items-center">
-        @Html.LabelFor(model => model.Account.AccountNameCode, htmlAttributes: new { @class = "col-md-4" })
-        <div class="col-md-8">
-            @Html.DisplayFor(m => m.Account.AccountNameCode)
-        </div>
-    </div>
-    <div class="input-group h-100 justify-content-center align-items-center">
-        @Html.LabelFor(m => m.DeliveryMethod, htmlAttributes: new { @class = "col-md-4" })
-        <div class="col-md-8">
-            @Html.DropDownListFor(m => m.DeliveryMethod, EnumHelper.GetSelectList(typeof(DeliveryMethods)), "Select Delivery Method", new { @class = "chosen-select form-control" })
-        </div>
-    </div>
-    <div class="input-group h-100 justify-content-center align-items-center" style="@(Model.DeliveryMethod != DeliveryMethods.DPD ?"display:none":"")">
-        @Html.LabelFor(model => model.TenantDeliveryServiceId, htmlAttributes: new { @class = "col-md-4" })
-        <div class="col-md-8 pull-left" id="divserviceDriver">@Html.DropDownListFor(m => m.TenantDeliveryServiceId, ViewBag.TenantsDeliveryServices as SelectList, "Select Service", new { @class = "chosen-select" })</div>
-    </div>
-    <div class="input-group h-100 justify-content-center align-items-center">
-        @Html.LabelFor(m => m.DeliveryNumber, htmlAttributes: new { @class = "col-md-4" })
-        <div class="col-md-8">
-            @Html.TextBoxFor(m => m.DeliveryNumber, new { placeholder = "Delivery Number", @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.DeliveryNumber)
-        </div>
-    </div>
-</div>
     <div class="col-md-6 pull-left">
         <div class="input-group h-100 justify-content-center align-items-center">
             @Html.LabelFor(m => m.ShipmentAddressLine1, htmlAttributes: new { @class = "col-md-4" })
@@ -132,7 +130,7 @@
                 @Html.ValidationMessageFor(model => model.ShipmentAddressPostcode)
             </div>
         </div>
-                <div class="input-group h-100 justify-content-center align-items-center">
+        <div class="input-group h-100 justify-content-center align-items-center">
             @Html.LabelFor(m => m.ShipmentCountryId, htmlAttributes: new { @class = "col-md-4" })
             <div class="col-md-8">
                 @Html.DropDownListFor(m => m.ShipmentCountryId, ViewBag.Countries as SelectList, new { @class = "chosen-select form-control" })
