--- a/WMS/Views/Theme/Modern/Pallets/_PalletDisptachDetail.cshtml
+++ b/WMS/Views/Theme/Modern/Pallets/_PalletDisptachDetail.cshtml
@@ -44,10 +44,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="data-ddp" style="@(string.IsNullOrEmpty(Model.NetworkCode)?"display:none":"")">
+                    <div style="@(string.IsNullOrEmpty(Model.NetworkCode)?"display:none":"")">
                         <div class="col-md-12 p-0 pull-left">
                             <div class="col-md-4 pull-left pallet-quantity-hlabel">Select Service</div>
-                            <div class="col-md-8 pull-left" id="divserviceDriver">@Html.DropDownListFor(m => m.NetworkCode, Model.AllDpdServices, "Select Service", new { @class = "chosen-select" })</div>
+                            <div class="col-md-8 pull-left">@Html.DropDownListFor(m => m.NetworkCode, Model.AllDpdServices, "Select Service", new { @class = "chosen-select" })</div>
                         </div>
                     </div>
                     <div class="col-md-12 p-0 pull-left">
