--- a/WMS/Views/Theme/Default/SalesOrders/_SOShippingDetails.cshtml
+++ b/WMS/Views/Theme/Default/SalesOrders/_SOShippingDetails.cshtml
@@ -5,10 +5,10 @@
     <div id="so-shipment-info" style="visibility: @(ViewBag.IsShipmentToAccountAddress == true ? "visible" : "hidden")">
         <div class="order-shipmentinfo-panes">
             <div class="input-group h-100 justify-content-center align-items-center">
-                <div class ="col-md-4 pull-left">
+                <div class="col-md-4 pull-left">
                     <label class="checkbox-inline"><input type="radio" value="1" @(ViewBag.IsShipmentToAccountAddress == true ? "checked" : "") name="SOShipmentDestination" /> Existing Address </label>
                 </div>
-                <div class ="col-md-4 pull-left">
+                <div class="col-md-4 pull-left">
                     <label class="checkbox-inline"><input type="radio" value="2" name="SOShipmentDestination" @(ViewBag.IsShipmentToCustomAddress == true ? "checked" : "") /> New address </label>
                 </div>
             </div>
@@ -20,22 +20,41 @@
         </div>
         <div class="col-md-12 order-shipmentinfo-panes" id="divCustomShipmentAddress">
             <h2><span>Shipment Address</span></h2>
-            <div class="input-group h-100 justify-content-center align-items-center">
-                @Html.TextBoxFor(m => m.ShipmentAddressLine1, new { placeholder = "Address Line1", @class = "form-control" })
-                @Html.TextBoxFor(m => m.ShipmentAddressLine2, new { placeholder = "Address Line2", @class = "form-control" })
-                @Html.TextBoxFor(m => m.ShipmentAddressLine3, new { placeholder = "Address Line3", @class = "form-control" })
-                @Html.TextBoxFor(m => m.ShipmentAddressTown, new { placeholder = "Address Town", @class = "form-control" })
-                @Html.TextBoxFor(m => m.ShipmentAddressPostcode, new { placeholder = "Postcode", @class = "form-control" })
-                @Html.DropDownList("ShipmentCountryId", ViewBag.Countries as SelectList, new { @class = "chosen-select form-control" })
+            <div class="col-md-6 float-left address-detail">
+                @Html.Label("Address Line 1", htmlAttributes: new { @class = "col-md-4 required-asterisk"})
+                <div class="col-md-8">
+                    @Html.TextBoxFor(m => m.ShipmentAddressLine1, new { @class = "form-control", @required = "required" })
+                    @Html.ValidationMessageFor(model => model.ShipmentAddressLine1)
+                </div>
             </div>
-            <div class="input-group h-100 justify-content-center align-items-center">
-                <div class="mt-1">
-                    @Html.CheckBox("AddAddressToAccount", false)
+            <div class="col-md-6 float-left address-detail">
+                @Html.Label("Address Line 2", htmlAttributes: new { @class = "col-md-4" })
+                <div class="col-md-8">
+                    @Html.TextBoxFor(m => m.ShipmentAddressLine2, new { @class = "form-control" })
                 </div>
-                <div class ="col-md-4 pull-left">
-                    <label class="checkbox-inline control-label">Tick to add this Account Shipment Addresses</label>
+            </div>
+            <div class="col-md-6 float-left address-detail">
+                @Html.Label("Address Line 3", htmlAttributes: new { @class = "col-md-4" })
+                <div class="col-md-8">
+                    @Html.TextBoxFor(m => m.ShipmentAddressLine3, new { @class = "form-control" })
                 </div>
+            </div>
+            <div class="col-md-6 float-left address-detail">
+                @Html.Label("Town", htmlAttributes: new { @class = "col-md-4 required-asterisk" })
+                <div class="col-md-8">
+                    @Html.TextBoxFor(m => m.ShipmentAddressTown, new { @class = "form-control", @required = "required" })
+                </div>
+            </div>
+            <div class="col-md-6 float-left address-detail">
+                @Html.Label("Country", htmlAttributes: new { @class = "col-md-4 required-asterisk" })
+                <div class="col-md-8">
+                    @Html.DropDownList("ShipmentCountryId", ViewBag.Countries as SelectList, new { @class = "chosen-select form-control required", @required = "required" })
+                </div>
+            </div>
 
+            <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.CheckBox("AddAddressToAccount", false)
+                <label class="checkbox-inline control-label">Tick to add this Account Shipment Addresses</label>
             </div>
         </div>
     </div>
