--- a/WMS/Views/Theme/Modern/SalesOrders/Edit.cshtml
+++ b/WMS/Views/Theme/Modern/SalesOrders/Edit.cshtml
@@ -50,7 +50,7 @@
             <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.LabelFor(model => model.OrderNumber, htmlAttributes: new { @class = "col-md-4" })
                 <div class="col-md-8">
-                    @Html.EditorFor(model => model.OrderNumber)
+                    @Html.EditorFor(model => model.OrderNumber, new { @required = "required" })
                     @Html.ValidationMessageFor(model => model.OrderNumber)
                 </div>
             </div>
