--- a/WMS/Views/Theme/Default/Account/Create.cshtml
+++ b/WMS/Views/Theme/Default/Account/Create.cshtml
@@ -207,6 +207,12 @@
             </div>
         </div>
         <div class="input-group h-100 justify-content-center align-items-center">
+            @Html.Label("Sector", htmlAttributes: new { @class = "col-md-4" })
+            <div class="col-md-8">
+                @Html.DropDownList("AccountSectorId", ViewBag.AccountSectors as SelectList, "Select Sector", new { @class = "chosen-select" })
+            </div>
+        </div>
+        <div class="input-group h-100 justify-content-center align-items-center">
             @Html.Label("Owner User", htmlAttributes: new { @class = "col-md-4" })
             <div class="col-md-8">
                 @Html.DropDownList("OwnerUserId", ViewBag.OwnerUsers as IEnumerable<SelectListItem>, new { @class = "chosen-select" })
